# txa-dvic-projects-tutos

./: 3dplots.py  README.md  answer.py  basics.py  code-functionality.py  cvbridge_modified.py  cvbridge_v1.4.py  keyboard_control.py  ros-commands.py  transformations.py  turtle_nodes.launch  turtlesim.session  with-pause.py
Behaviour Planning with ROS/: gen_button.py  testmonitor.py
Merging technologies with ROS/: code-functionality.py  cvbridge_v1.4.py  cvbridge_v1.5.py  webcam_door.py
Merging technologies with ROS/chapter_5_ws/: navigation.rviz
Previously/: executive.py  usecc.py
Previously/actionlib_tutorials/: CMakeLists.txt  package.xml
Previously/scripts/: gen_button.py  lidar_processing.py  turtleSim_server.py  usecccOLD.py
backup/: follow_base2.py  togoal.py  turtleSim_server.py
chapter_5_ws/devel/: setup.sh
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
example_model/: model.sdf
similarCode/: OverallTurtleSim.c  arena_sm.py  crazyflieSim.py  individual_hover.py  multithread.c  togoal.py  usec.py
src/: lidar_processing.py  okay.py  useccc.py
src/CLIENT SMACH/: 1_sentinel.py  1turtle_sm_approach.py  2_self-aware_sentinels.py  2_sentinels.py  2_sentinels_follow.py  2_sentinels_safer.py  2turtle_sm_approach.py  Concurrence_server.py  chatter.py  okay.py  (+8 more)
src/actionlib_tutorials/: CMakeLists.txt
src/actionlib_tutorials/action/: MoveTo.action  my_new.action
src/actionlib_tutorials/scripts/: clientmachine.py  fibonacci_client.py  fibonacci_server.py  turtleSim_server.py
src/actionlib_tutorials/srv/: killMotors.srv
(+377 files in other folders)
